[gd_scene load_steps=6 format=3 uid="uid://4a4jmf4ekek5"]

[ext_resource type="Texture2D" uid="uid://cxmh6wx1itgp0" path="res://MenusIcons_34x34.png" id="1_bbn2s"]
[ext_resource type="Script" uid="uid://c6qmtviaubtej" path="res://inventory_ui.gd" id="1_xlonu"]
[ext_resource type="Texture2D" uid="uid://1nmy5anlw73u" path="res://QuitIcon.png" id="3_ictmd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wlaer"]

[sub_resource type="LabelSettings" id="LabelSettings_ohugl"]

[node name="InventoryUI" type="CanvasLayer"]
script = ExtResource("1_xlonu")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -360.0
offset_right = 7.0
offset_bottom = -3.0
focus_mode = 1

[node name="BagButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -64.0
offset_right = 26.0
offset_bottom = -41.0
grow_vertical = 0
scale = Vector2(2.7, 2.7)
focus_mode = 1
texture_normal = ExtResource("1_bbn2s")

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -16.94
anchor_top = -9.621
anchor_right = 0.5
offset_left = 10968.2
offset_top = 3545.7
offset_right = -225.5
offset_bottom = 289.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wlaer")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2

[node name="Inventory" type="Label" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Inventory"
label_settings = SubResource("LabelSettings_ohugl")

[node name="ItemList" type="ItemList" parent="Control/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="DetailPanel" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/DetailPanel"]
layout_mode = 2

[node name="ItemImage" type="TextureRect" parent="Control/DetailPanel/VBoxContainer"]
layout_mode = 2

[node name="ItemLabel" type="Label" parent="Control/DetailPanel/VBoxContainer"]
layout_mode = 2

[node name="Close" type="TextureButton" parent="Control/DetailPanel"]
layout_mode = 2
texture_normal = ExtResource("3_ictmd")
